--- a/src/index.css
+++ b/src/index.css
@@ -271,7 +271,7 @@ section {
   }
 
   .tech-grid {
-    @apply grid xl:grid-cols-5 md:grid-cols-3 grid-cols-1 xl:gap-16 md:gap-10 gap-5 mt-16;
+    @apply grid xl:grid-cols-6 md:grid-cols-3 grid-cols-1 xl:gap-16 md:gap-10 gap-5 mt-16;
   }
 
   .tech-icon-wrapper {
@@ -369,12 +369,13 @@ section {
   background: linear-gradient(
     0deg,
     rgba(69, 222, 196, 0) 0%,
-    #62e0ff 25%,
-    #52aeff 37.51%,
-    #fd5c79 62.83%,
-    #6d45ce 92.91%
+    #FF5E00 25%,
+    #1801E7 37.51%,
+    #009488 50.00%,
+    #FF5E00 80.91%
   );
 }
+
 
 .gradient-edge:nth-of-type(1) {
   left: 0;
